--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pieces</title>
+    <link rel="icon" type="image/x-icon" href="./images/pieces_logo.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/efd2ff2659.js" crossorigin="anonymous"></script>
@@ -28,22 +29,34 @@
             <h2>Level up Your Chess</h2>
             <h3>Premium Chess Boards</h3>
             <div class="paragraph-image">
-                <p>Elevate your playing experience with our premium selection of chess boards and sets. Crafted with precision and attention to detail, our boards are designed to enhance both aesthetics and functionality. Choose from a variety of materials, including fine woods and luxurious finishes, to find the perfect board that reflects your style and sophistication.</p>
+                <div>
+                    <p>Elevate your playing experience with our premium selection of chess boards and sets. Crafted with precision and attention to detail, our boards are designed to enhance both aesthetics and functionality. Choose from a variety of materials, including fine woods and luxurious finishes, to find the perfect board that reflects your style and sophistication.</p>
+                    <a class="btn" href="./shop.html">Shop</a>
+                </div>
                 <div class="home-image1"></div>
             </div>
             <h3>Learn</h3>
             <div class="paragraph-image">
-                <p>At Pieces, we're dedicated to helping chess enthusiasts of all levels improve their game. Whether you're a beginner looking to learn the basics or a seasoned player seeking advanced strategies, we have the tools and resources you need to elevate your chess mastery.</p>
+                <div>
+                    <p>At Pieces, we're dedicated to helping chess enthusiasts of all levels improve their game. Whether you're a beginner looking to learn the basics or a seasoned player seeking advanced strategies, we have the tools and resources you need to elevate your chess mastery.</p>
+                    <a class="btn" href="./openings.html">Learn</a>
+                </div>
                 <div class="home-image2"></div>
             </div>
             <h3>Choose from Unlimited Puzzles</h3>
             <div class="paragraph-image">
-                <p>Challenge yourself with our extensive collection of chess puzzles. Test your tactical awareness, sharpen your calculation skills, and learn new tactical motifs. With puzzles ranging from beginner to grandmaster level, there's something for everyone to enjoy and learn from.</p>
+                <div>
+                    <p>Challenge yourself with our extensive collection of chess puzzles. Test your tactical awareness, sharpen your calculation skills, and learn new tactical motifs. With puzzles ranging from beginner to grandmaster level, there's something for everyone to enjoy and learn from.</p>
+                    <a class="btn" href="./puzzles.html">Puzzles</a>
+                </div>
                 <div class="home-image3"></div>
             </div>
             <h3>Openings</h3>
             <div class="paragraph-image">
-                <p>Explore the fascinating world of chess openings with our comprehensive Opening Explorer tool. Discover popular opening lines, study variations, and learn the principles behind each opening. Whether you prefer aggressive gambits or solid positional play, our Opening Explorer will help you expand your repertoire and improve your understanding of opening theory.</p>
+                <div>
+                    <p>Explore the fascinating world of chess openings with our comprehensive Opening Explorer tool. Discover popular opening lines, study variations, and learn the principles behind each opening. Whether you prefer aggressive gambits or solid positional play, our Opening Explorer will help you expand your repertoire and improve your understanding of opening theory.</p>
+                    <a class="btn" href="./openings.html">Openings</a>
+                </div>
                 <div class="home-image4"></div>
             </div>
         </div>
