--- a/puzzles.html
+++ b/puzzles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pieces</title>
+    <link rel="icon" type="image/x-icon" href="./images/pieces_logo.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/flickity.css" media="screen">
