--- a/shop.html
+++ b/shop.html
@@ -23,12 +23,13 @@
             <a class="logo" href="./index.html"></a>
         </nav>
     </header>
-    <div class="shop-flex">
+    <section class="shop-flex">
         <h1>Shop</h1>
         <a href="" class="product">
             <div class="product-description">
                 <h3>Classic Board $30</h3>
                 <p>A board that is made out of premium wood.</p>
+                <p class="btn">Add to Cart</p>
             </div>
         </a>
         <a href="" class="product">
@@ -43,7 +44,7 @@
                 <p>One of our most extravagant boards.</p>
             </div>
         </a>
-    </div>
+    </section>
     <footer>
         Some descriptive content written by AI
     </footer>
