--- a/puzzles.html
+++ b/puzzles.html
@@ -28,12 +28,19 @@
         <h1>Puzzles</h1>
         <div>
             <h2>Daily</h2>
-            <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
-                <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
-                <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
-                <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
-                <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
-                <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
+            <div class="carousel">
+                <div class="carousel-cell">
+                    <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
+                </div>
+                <div class="carousel-cell">
+                    <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
+                </div>
+                <div class="carousel-cell">
+                    <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
+                </div>
+                <div class="carousel-cell">
+                    <a href="./puzzles/puzzleone.html"><img src="./images/puzzle.png" alt="Puzzle 1"/></a>
+                </div>
             </div>
         </div>
     </div>
@@ -44,12 +51,12 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="./js/flickity.js"></script>
     <script>
-        var elem = document.querySelector('.main-carousel');
+        var elem = document.querySelector('.carousel');
         var flkty = new Flickity( elem, {
             // options
-            cellAlign: 'left',
-            contain: true,
-            freeScroll: true,
+            pageDots: true,
+            imagesLoaded: true,
+            percentPosition: false,
         });
     </script>
 </body>
