--- a/puzzles/puzzleone.html
+++ b/puzzles/puzzleone.html
@@ -124,6 +124,7 @@
         Some descriptive content written by AI
     </footer>
     <script src="../js/main.js"></script>
+    <script src="../js/puzzle1.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="../js/flickity.js"></script>
     <script>
