--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <a class="logo" href="./index.html"></a>
         </nav>
     </header>
-    <div class="contact-flex">
+    <section class="contact-flex">
         <h1>Contact</h1>
         <div class="contact-section">
             <div class="user-message">
@@ -38,7 +38,7 @@
                 <p>support@pieces.com</p>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         Some descriptive content written by AI
     </footer>
