--- a/puzzles.html
+++ b/puzzles.html
@@ -24,7 +24,7 @@
             <a class="logo" href="./index.html"></a>
         </nav>
     </header>
-    <div class="puzzle-flex">
+    <section class="puzzle-flex">
         <h1>Puzzles</h1>
         <div>
             <h2>Daily</h2>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         Some descriptive content written by AI
     </footer>
