--- a/puzzles/puzzleone.html
+++ b/puzzles/puzzleone.html
@@ -24,91 +24,91 @@
             <a class="logo" href="../index.html"></a>
         </nav>
     </header>
-    <div class="puzzlepage-flex">
+    <section class="puzzlepage-flex">
         <h1>Puzzles</h1>
         <div class="puzzlepage-flexchild">
             <h2>Try to solve it!</h2>
             <div class="puzzle-center">
                 <div class="puzzle1" id="puzzle1">
                     <div>
-                        <div id="a8"></div>
-                        <div id="b8"></div>
-                        <div id="c8"></div>
-                        <div id="d8"></div>
-                        <div id="e8"></div>
-                        <div id="f8"></div>
-                        <div id="g8"></div>
-                        <div id="h8"><p>8</p></div>
+                        <div class="board-cords" id="a8"></div>
+                        <div class="board-cords" id="b8"></div>
+                        <div class="board-cords" id="c8"></div>
+                        <div class="board-cords" id="d8"></div>
+                        <div class="board-cords playable" id="e8"></div>
+                        <div class="board-cords" id="f8"></div>
+                        <div class="board-cords" id="g8"></div>
+                        <div class="board-cords" id="h8"><p>8</p></div>
                     </div>
                     <div>
-                        <div id="a7"></div>
-                        <div id="b7"></div>
-                        <div id="c7"></div>
-                        <div id="d7"></div>
-                        <div id="e7"></div>
-                        <div id="f7"></div>
-                        <div id="g7"></div>
-                        <div id="h7"><p>7</p></div>
+                        <div class="board-cords" id="a7"></div>
+                        <div class="board-cords" id="b7"></div>
+                        <div class="board-cords" id="c7"></div>
+                        <div class="board-cords" id="d7"></div>
+                        <div class="board-cords" id="e7"></div>
+                        <div class="board-cords" id="f7"></div>
+                        <div class="board-cords" id="g7"></div>
+                        <div class="board-cords" id="h7"><p>7</p></div>
                     </div>
                     <div>
-                        <div id="a6"></div>
-                        <div id="b6"></div>
-                        <div id="c6"></div>
-                        <div id="d6"></div>
-                        <div id="e6"></div>
-                        <div id="f6"></div>
-                        <div id="g6"></div>
-                        <div id="h6"><p>6</p></div>
+                        <div class="board-cords" id="a6"></div>
+                        <div class="board-cords" id="b6"></div>
+                        <div class="board-cords" id="c6"></div>
+                        <div class="board-cords" id="d6"></div>
+                        <div class="board-cords" id="e6"></div>
+                        <div class="board-cords" id="f6"></div>
+                        <div class="board-cords" id="g6"></div>
+                        <div class="board-cords" id="h6"><p>6</p></div>
                     </div>
                     <div>
-                        <div id="a5"></div>
-                        <div id="b5"></div>
-                        <div id="c5"></div>
-                        <div id="d5"></div>
-                        <div id="e5"></div>
-                        <div id="f5"></div>
-                        <div id="g5"></div>
-                        <div id="h5"><p>5</p></div>
+                        <div class="board-cords" id="a5"></div>
+                        <div class="board-cords" id="b5"></div>
+                        <div class="board-cords" id="c5"></div>
+                        <div class="board-cords" id="d5"></div>
+                        <div class="board-cords" id="e5"></div>
+                        <div class="board-cords" id="f5"></div>
+                        <div class="board-cords playable" id="g5"></div>
+                        <div class="board-cords playable" id="h5"><p>5</p></div>
                     </div>
                     <div>
-                        <div id="a4"></div>
-                        <div id="b4"></div>
-                        <div id="c4"></div>
-                        <div id="d4"></div>
-                        <div id="e4"></div>
-                        <div id="f4"></div>
-                        <div id="g4"></div>
-                        <div id="h4"><p>4</p></div>
+                        <div class="board-cords" id="a4"></div>
+                        <div class="board-cords" id="b4"></div>
+                        <div class="board-cords" id="c4"></div>
+                        <div class="board-cords" id="d4"></div>
+                        <div class="board-cords" id="e4"></div>
+                        <div class="board-cords" id="f4"></div>
+                        <div class="board-cords" id="g4"></div>
+                        <div class="board-cords" id="h4"><p>4</p></div>
                     </div>
                     <div>
-                        <div id="a3"></div>
-                        <div id="b3"></div>
-                        <div id="c3"></div>
-                        <div id="d3"></div>
-                        <div id="e3"></div>
-                        <div id="f3"></div>
-                        <div id="g3"></div>
-                        <div id="h3"><p>3</p></div>
+                        <div class="board-cords" id="a3"></div>
+                        <div class="board-cords" id="b3"></div>
+                        <div class="board-cords" id="c3"></div>
+                        <div class="board-cords" id="d3"></div>
+                        <div class="board-cords" id="e3"></div>
+                        <div class="board-cords" id="f3"></div>
+                        <div class="board-cords playable" id="g3"></div>
+                        <div class="board-cords" id="h3"><p>3</p></div>
                     </div>
                     <div>
-                        <div id="a2"></div>
-                        <div id="b2"></div>
-                        <div id="c2"></div>
-                        <div id="d2"></div>
-                        <div id="e2"></div>
-                        <div id="f2"></div>
-                        <div id="g2"></div>
-                        <div id="h2"><p>2</p></div>
+                        <div class="board-cords" id="a2"></div>
+                        <div class="board-cords" id="b2"></div>
+                        <div class="board-cords" id="c2"></div>
+                        <div class="board-cords" id="d2"></div>
+                        <div class="board-cords" id="e2"></div>
+                        <div class="board-cords" id="f2"></div>
+                        <div class="board-cords" id="g2"></div>
+                        <div class="board-cords" id="h2"><p>2</p></div>
                     </div>
                     <div>
-                        <div id="a1"><p>a</p></div>
-                        <div id="b1"><p>b</p></div>
-                        <div id="c1"><p>c</p></div>
-                        <div id="d1"><p>d</p></div>
-                        <div id="e1"><p>e</p></div>
-                        <div id="f1"><p>f</p></div>
-                        <div id="g1"><p>g</p></div>
-                        <div id="h1"><p>h1</p></div>
+                        <div class="board-cords" id="a1"><p>a</p></div>
+                        <div class="board-cords" id="b1"><p>b</p></div>
+                        <div class="board-cords" id="c1"><p>c</p></div>
+                        <div class="board-cords" id="d1"><p>d</p></div>
+                        <div class="board-cords" id="e1"><p>e</p></div>
+                        <div class="board-cords" id="f1"><p>f</p></div>
+                        <div class="board-cords" id="g1"><p>g</p></div>
+                        <div class="board-cords" id="h1"><p>h1</p></div>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         Some descriptive content written by AI
     </footer>
