--- a/openings.html
+++ b/openings.html
@@ -23,7 +23,7 @@
             <a class="logo" href="./index.html"></a>
         </nav>
     </header>
-    <div class="openings-flex">
+    <section class="openings-flex">
         <h1>Openings</h1>
         <div class="search-bar">
             <svg width="10%" height="60%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         <p>Some descriptive content written by AI <br> Openings description taken from <a href="https://en.wikibooks.org/wiki/Chess/Basic_Openings">WikiBooks</a></p>
     </footer>
