--- a/puzzles/puzzleone.html
+++ b/puzzles/puzzleone.html
@@ -31,84 +31,84 @@
             <div class="puzzle-center">
                 <div class="puzzle1" id="puzzle1">
                     <div>
-                        <div class="board-cords" id="a8"></div>
-                        <div class="board-cords" id="b8"></div>
-                        <div class="board-cords" id="c8"></div>
-                        <div class="board-cords" id="d8"></div>
-                        <div class="board-cords playable" id="e8"></div>
-                        <div class="board-cords" id="f8"></div>
-                        <div class="board-cords" id="g8"></div>
-                        <div class="board-cords" id="h8"><p>8</p></div>
+                        <div class="board-cords black" id="a8"></div>
+                        <div class="board-cords black" id="b8"></div>
+                        <div class="board-cords black" id="c8"></div>
+                        <div class="board-cords black" id="d8"></div>
+                        <div class="board-cords white queen" id="e8"></div>
+                        <div class="board-cords black" id="f8"></div>
+                        <div class="board-cords black" id="g8"></div>
+                        <div class="board-cords black" id="h8"><p>8</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a7"></div>
-                        <div class="board-cords" id="b7"></div>
-                        <div class="board-cords" id="c7"></div>
-                        <div class="board-cords" id="d7"></div>
-                        <div class="board-cords" id="e7"></div>
-                        <div class="board-cords" id="f7"></div>
-                        <div class="board-cords" id="g7"></div>
-                        <div class="board-cords" id="h7"><p>7</p></div>
+                        <div class="board-cords black" id="a7"></div>
+                        <div class="board-cords black pawn" id="b7"></div>
+                        <div class="board-cords black" id="c7"></div>
+                        <div class="board-cords black rook" id="d7"></div>
+                        <div class="board-cords black" id="e7"></div>
+                        <div class="board-cords black pawn" id="f7"></div>
+                        <div class="board-cords black king" id="g7"></div>
+                        <div class="board-cords black pawn" id="h7"><p>7</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a6"></div>
-                        <div class="board-cords" id="b6"></div>
-                        <div class="board-cords" id="c6"></div>
-                        <div class="board-cords" id="d6"></div>
-                        <div class="board-cords" id="e6"></div>
-                        <div class="board-cords" id="f6"></div>
-                        <div class="board-cords" id="g6"></div>
-                        <div class="board-cords" id="h6"><p>6</p></div>
+                        <div class="board-cords black pawn" id="a6"></div>
+                        <div class="board-cords black played-from" id="b6"></div>
+                        <div class="board-cords black" id="c6"></div>
+                        <div class="board-cords black" id="d6"></div>
+                        <div class="board-cords black" id="e6"></div>
+                        <div class="board-cords black" id="f6"></div>
+                        <div class="board-cords black pawn" id="g6"></div>
+                        <div class="board-cords black" id="h6"><p>6</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a5"></div>
-                        <div class="board-cords" id="b5"></div>
-                        <div class="board-cords" id="c5"></div>
-                        <div class="board-cords" id="d5"></div>
-                        <div class="board-cords" id="e5"></div>
-                        <div class="board-cords" id="f5"></div>
-                        <div class="board-cords playable" id="g5"></div>
-                        <div class="board-cords playable" id="h5"><p>5</p></div>
+                        <div class="board-cords black" id="a5"></div>
+                        <div class="board-cords black queen played-to" id="b5"></div>
+                        <div class="board-cords black" id="c5"></div>
+                        <div class="board-cords black" id="d5"></div>
+                        <div class="board-cords black" id="e5"></div>
+                        <div class="board-cords black" id="f5"></div>
+                        <div class="board-cords white bishop" id="g5"></div>
+                        <div class="board-cords white pawn" id="h5"><p>5</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a4"></div>
-                        <div class="board-cords" id="b4"></div>
-                        <div class="board-cords" id="c4"></div>
-                        <div class="board-cords" id="d4"></div>
-                        <div class="board-cords" id="e4"></div>
-                        <div class="board-cords" id="f4"></div>
-                        <div class="board-cords" id="g4"></div>
-                        <div class="board-cords" id="h4"><p>4</p></div>
+                        <div class="board-cords black" id="a4"></div>
+                        <div class="board-cords black" id="b4"></div>
+                        <div class="board-cords black" id="c4"></div>
+                        <div class="board-cords black bishop" id="d4"></div>
+                        <div class="board-cords black" id="e4"></div>
+                        <div class="board-cords black" id="f4"></div>
+                        <div class="board-cords black" id="g4"></div>
+                        <div class="board-cords black" id="h4"><p>4</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a3"></div>
-                        <div class="board-cords" id="b3"></div>
-                        <div class="board-cords" id="c3"></div>
-                        <div class="board-cords" id="d3"></div>
-                        <div class="board-cords" id="e3"></div>
-                        <div class="board-cords" id="f3"></div>
-                        <div class="board-cords playable" id="g3"></div>
-                        <div class="board-cords" id="h3"><p>3</p></div>
+                        <div class="board-cords black" id="a3"></div>
+                        <div class="board-cords black" id="b3"></div>
+                        <div class="board-cords black" id="c3"></div>
+                        <div class="board-cords black" id="d3"></div>
+                        <div class="board-cords black" id="e3"></div>
+                        <div class="board-cords black" id="f3"></div>
+                        <div class="board-cords white king" id="g3"></div>
+                        <div class="board-cords black" id="h3"><p>3</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a2"></div>
-                        <div class="board-cords" id="b2"></div>
-                        <div class="board-cords" id="c2"></div>
-                        <div class="board-cords" id="d2"></div>
-                        <div class="board-cords" id="e2"></div>
-                        <div class="board-cords" id="f2"></div>
-                        <div class="board-cords" id="g2"></div>
-                        <div class="board-cords" id="h2"><p>2</p></div>
+                        <div class="board-cords black" id="a2"></div>
+                        <div class="board-cords black" id="b2"></div>
+                        <div class="board-cords black" id="c2"></div>
+                        <div class="board-cords black" id="d2"></div>
+                        <div class="board-cords black" id="e2"></div>
+                        <div class="board-cords black" id="f2"></div>
+                        <div class="board-cords black" id="g2"></div>
+                        <div class="board-cords black" id="h2"><p>2</p></div>
                     </div>
                     <div>
-                        <div class="board-cords" id="a1"><p>a</p></div>
-                        <div class="board-cords" id="b1"><p>b</p></div>
-                        <div class="board-cords" id="c1"><p>c</p></div>
-                        <div class="board-cords" id="d1"><p>d</p></div>
-                        <div class="board-cords" id="e1"><p>e</p></div>
-                        <div class="board-cords" id="f1"><p>f</p></div>
-                        <div class="board-cords" id="g1"><p>g</p></div>
-                        <div class="board-cords" id="h1"><p>h1</p></div>
+                        <div class="board-cords black" id="a1"><p>a</p></div>
+                        <div class="board-cords black" id="b1"><p>b</p></div>
+                        <div class="board-cords black" id="c1"><p>c</p></div>
+                        <div class="board-cords black" id="d1"><p>d</p></div>
+                        <div class="board-cords black" id="e1"><p>e</p></div>
+                        <div class="board-cords black" id="f1"><p>f</p></div>
+                        <div class="board-cords black" id="g1"><p>g</p></div>
+                        <div class="board-cords black" id="h1"><p>h1</p></div>
                     </div>
                 </div>
             </div>
