--- a/puzzles/puzzleone.html
+++ b/puzzles/puzzleone.html
@@ -27,7 +27,7 @@
     <section class="puzzlepage-flex">
         <h1>Puzzles</h1>
         <div class="puzzlepage-flexchild">
-            <h2>Try to solve it!</h2>
+            <h2>Try to solve it! (white to move)</h2>
             <div class="puzzle-center">
                 <div class="puzzle1" id="puzzle1">
                     <div>
