--- a/shop.html
+++ b/shop.html
@@ -34,14 +34,16 @@
         </a>
         <a href="" class="product">
             <div class="product-description">
-                <h3>Glass Board $50</h3>
-                <p>Absolute elegant pieces and sound.</p>
+                <h3>Classic Board $30</h3>
+                <p>A board that is made out of premium wood.</p>
+                <p class="btn">Add to Cart</p>
             </div>
         </a>
         <a href="" class="product">
             <div class="product-description">
-                <h3>Wood Board $75</h3>
-                <p>One of our most extravagant boards.</p>
+                <h3>Classic Board $30</h3>
+                <p>A board that is made out of premium wood.</p>
+                <p class="btn">Add to Cart</p>
             </div>
         </a>
     </section>
